updated text and added new project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="Learnport" content="width=device-width, initial-scale=1.0">
 
         <!--==================== UNICONS ====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -95,7 +95,7 @@
                             </a>
                         </div>
                         <div class="home_img">
-                            <svg class="home_blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg class="home_blob" LearnBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <mask id="mask0" mask-type="alpha">
                                     <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
                                     130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
@@ -134,15 +134,15 @@
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
-                <h2 class="about_title section_title">Nice to meet you</h2>
-                <span class="about_subtitle section_subtitle">Here's a little about me</span>
+                <h2 class="about_title section_title">Nice to meet you!</h2>
+                <span class="about_subtitle section_subtitle">To tell you a little about me</span>
                 <div class="about_container container grid">
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
-                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (see the photo of me and Arati sharing a good chuckle)! 
+                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (look at a photo of me and Arati sharing a good chuckle XD)! 
                             <br></br>
-                            I describe myself as an optimist at heart and a cautionist by training. I believe in technology's promise to tackle society's greatest challenges but only with the necessary guardrails to ensure its safe and responsible use. This philosophy has motivated my work, from exploring models for human-robot collaboration at NIST to researching AI policies that mitigate the potential for harm at OSTP.
+                            I describe myself as an optimist at heart and a cautionist by training. I believe technology offers new opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
                         </p>
                         <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
@@ -155,10 +155,26 @@
 
             <section class="services section" id="projects">
                 <h2 class="section_title">Check out my work</h2>
-                <span class="section_subtitle">Here are some things I've worked on</span>
+                <span class="section_subtitle">Here are some cool things I've done</span>
 
                 <div class="services_container container grid">
 
+                <!-- project 1-->
+                <div class="services_content">
+                    <div>
+                        <img src="assets/img/paragon.png" alt="" class="project_img">
+                        <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                        <h3 class="services_title">Paragon Policy Fellowship</h3>
+                        <p class="project_description">
+                            The Paragon fellowship is a unique opportunity for students to work on science and tech policy issues in their state and local governments.
+                        </div>
+                    </p>
+                    </div>
+                    <a href="https://www.paragonfellowship.org/" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                        Learn More 
+                        <i class="uil uil-arrow-right button_icon"></i>
+                    </a>
+                </div>
                     
                     <!-- project 1-->
                     <div class="services_content">
@@ -172,23 +188,9 @@
                         </p>
                         </div>
                         <a href="https://github.com/jennjwang/arvr-pictionary" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            View More 
+                            Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
-                        <div class="services_modal">
-                            <div class="services_modal-content">
-                                <div>
-                                    <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
-                                    <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                                        <h3 class="services_title">Project 1</h3>
-                                        <p class="project_description">
-                                            fhwoifhwiofhwoifh
-                                        </p>
-                                    </div>
-                                </div>
-                                <i class="uil uil-times services_modal-close"></i>
-                            </div>
-                        </div>
                     </div>
 
                     <!-- project 2 -->
@@ -203,7 +205,7 @@
                             </div>
                         </div>
                         <a href="https://github.com/jennjwang/deepfake-detection" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            View More 
+                            Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
                         <!-- <div class="services_modal">
@@ -229,7 +231,7 @@
                         </p>
                         </div>
                         <a href="https://rafarodsa.github.io/rlang_rldm2022.pdf" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            View More 
+                            Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
                         <div class="services_modal">
@@ -255,7 +257,7 @@
                         </p>
                         </div>
                         <a href="https://github.com/shelly-bagchi/robot-learning-interface/tree/main/Algorithms" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            View More 
+                            Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
                         <div class="services_modal">
@@ -281,7 +283,7 @@
                         </p>
                         </div>
                         <a href="https://2022.hackatbrown.org/" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            View More 
+                            Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
                         <div class="services_modal">
@@ -307,7 +309,7 @@
                         </p>
                         </div>
                         <a href="https://portfolio-ten-pi-71.vercel.app/redesign/redesign" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            View More 
+                            Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
                         <div class="services_modal">
@@ -425,7 +427,7 @@
                                         <br><br>
                                         CS0320 Software Engineering: I designed curriculum featuring screen reader development and accessibility; held weekly office hours and mentor meetings for over 200 students, teaching Java, Typescript, and React.
                                         <br><br>
-                                        CS0100 Data Fluency: I led discussion sections and labs for over 60 students to review and practice computational techniques in data science; assisted with course preparation tailored towards non-concentrators.
+                                        CS0100 Data Fluency: I led discussion sections and labs for over 60 students to reLearn and practice computational techniques in data science; assisted with course preparation tailored towards non-concentrators.
                                     </p>
                                 </div>
                             </div>
