--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
-                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (look at a photo of me and Arati sharing a good chuckle XD)! 
+                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (see a photo of me and Arati sharing a good chuckle XD)! 
                             <br></br>
                             I describe myself as an optimist at heart and a cautionist by training. I believe technology offers new opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
                         </p>
@@ -160,21 +160,38 @@
                 <div class="services_container container grid">
 
                 <!-- project 1-->
-                <div class="services_content">
-                    <div>
-                        <img src="assets/img/paragon.png" alt="" class="project_img">
-                        <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                        <h3 class="services_title">Paragon Policy Fellowship</h3>
-                        <p class="project_description">
-                            The Paragon fellowship is a unique opportunity for students to work on science and tech policy issues in their state and local governments.
+                    <div class="services_content">
+                        <div>
+                            <img src="assets/img/paragon.png" alt="" class="project_img">
+                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                            <h3 class="services_title">Paragon Policy Fellowship</h3>
+                            <p class="project_description">
+                                The Paragon fellowship is an opportunity for students to explore and gain experience working on science and tech policy issues in their state and local governments.
+                            </div>
+                        </p>
                         </div>
-                    </p>
+                        <a href="https://www.paragonfellowship.org/" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            Learn More 
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </a>
                     </div>
-                    <a href="https://www.paragonfellowship.org/" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                        Learn More 
-                        <i class="uil uil-arrow-right button_icon"></i>
-                    </a>
-                </div>
+
+                    <!-- project 1-->
+                    <div class="services_content">
+                        <div>
+                            <img src="assets/img/mggg.png" alt="" class="project_img">
+                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                            <h3 class="services_title">VoteKit</h3>
+                            <p class="project_description">
+                                VoteKit, nicknamed “a Swiss army knife for social choice research”, is a Python package for researchers to study any stage of the ranked-choice voting election process.
+                            </div>
+                        </p>
+                        </div>
+                        <a href="" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            Learn More 
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </a>
+                    </div>
                     
                     <!-- project 1-->
                     <div class="services_content">
@@ -234,15 +251,7 @@
                             Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
-                        <div class="services_modal">
-                            <div class="services_modal-content">
-                                <h4 class="services_modal-title">Project 1</h4>
-                                <p>
-                                    fwoifhwoihfiowhfoiw
-                                </p>
-                                <i class="uil uil-times services_modal-close"></i>
-                            </div>
-                        </div>
+                        
                     </div>
 
                     <!-- project 4 -->
@@ -260,18 +269,9 @@
                             Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
-                        <div class="services_modal">
-                            <div class="services_modal-content">
-                                <h4 class="services_modal-title">Project 1</h4>
-                                <p>
-                                    fwoifhwoihfiowhfoiw
-                                </p>
-                                <i class="uil uil-times services_modal-close"></i>
-                            </div>
-                        </div>
                     </div>
 
-                    <!-- project 5 -->
+                    <!-- project 5
                     <div class="services_content">
                         <div>
                             <img src="assets/img/hab.png" alt="" class="project_img">
@@ -297,7 +297,6 @@
                         </div>
                     </div>
 
-                    <!-- project 6 -->
                     <div class="services_content">
                         <div>
                             <img src="assets/img/nws.png" alt="" class="project_img">
@@ -321,7 +320,7 @@
                                 <i class="uil uil-times services_modal-close"></i>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </section>
