updated NIST project

--- a/index.html
+++ b/index.html
@@ -259,13 +259,14 @@
                         <div>
                             <img src="assets/img/hrc.jpg" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                            <h3 class="services_title">Robotic Learning Interface</h3>
+                            <h3 class="services_title">Robotic Teaching Interface</h3>
                             <p class="project_description">
-                                With the goal of teaching robotic arm pick-and-place tasks, I added ML algorithm support to a robotic learning interface, implementing sequential prediction with LSTMs and simulating an RL learning environment through simple_rl.
+                                As a part of the Collaborative Robotics Lab at NIST, I added reinforcement learning algorithm support to a robot teaching interface where
+                                goals can be given to the robot arm to perform pick-and-place tasks.
                             </div>
                         </p>
                         </div>
-                        <a href="https://github.com/shelly-bagchi/robot-learning-interface/tree/main/Algorithms" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                        <a href="https://github.com/shelly-bagchi/robot-learning-interface/tree/main" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
                             Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
