--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
-                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (see a photo of me and Arati sharing a good chuckle XD)! 
+                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (here's a photo of me and Arati sharing a good chuckle XD)! 
                             <br></br>
-                            I describe myself as an optimist at heart and a cautionist by training. I believe technology offers new opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
+                            I describe myself as an optimist at heart and a cautionist by training. I believe technology presents opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
                         </p>
                         <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
@@ -154,15 +154,15 @@
             </section>
 
             <section class="services section" id="projects">
-                <h2 class="section_title">Check out my work</h2>
-                <span class="section_subtitle">Here are some cool things I've done</span>
+                <h2 class="section_title">Check out my projects</h2>
+                <span class="section_subtitle">Here are some cool things I've worked out</span>
 
                 <div class="services_container container grid">
 
                 <!-- project 1-->
                     <div class="services_content">
                         <div>
-                            <img src="assets/img/paragon.png" alt="" class="project_img">
+                            <img src="assets/img/paragon.jpg" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
                             <h3 class="services_title">Paragon Policy Fellowship</h3>
                             <p class="project_description">
@@ -187,14 +187,30 @@
                             </div>
                         </p>
                         </div>
-                        <a href="" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                        <a href="https://mggg.github.io/VoteKit/" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            Learn More 
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </a>
+                    </div>
+
+                    <div class="services_content">
+                        <div>
+                            <img src="assets/img/eup.jpg" alt="" class="project_img">
+                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                            <h3 class="services_title">End-User Robot Program</h3>
+                            <p class="project_description">
+                                The End-User Robot Program is a project under <a href="http://rlab.cs.brown.edu/index.html">the RLAB</a> to study ways non-experts can interact with reinforcement learning systems through different programming paradigms in a visual interface.
+                            </div>
+                        </p>
+                        </div>
+                        <a href="https://github.com/jennjwang/eup-blockly" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
                             Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
                     </div>
                     
                     <!-- project 1-->
-                    <div class="services_content">
+                    <!-- <div class="services_content">
                         <div>
                             <img src="assets/img/arview.PNG" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
@@ -208,10 +224,10 @@
                             Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- project 2 -->
-                    <div class="services_content">
+                    <!-- <div class="services_content">
                         <div>
                             <img src="assets/img/sample_dataset.png" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
@@ -225,19 +241,10 @@
                             Learn More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
-                        <!-- <div class="services_modal">
-                            <div class="services_modal-content">
-                                <h4 class="services_modal-title">Project 1</h4>
-                                <p>
-                                    fwoifhwoihfiowhfoiw
-                                </p>
-                                <i class="uil uil-times services_modal-close"></i>
-                            </div>
-                        </div> -->
-                    </div>
+                    </div> -->
 
                     <!-- project 3 -->
-                    <div class="services_content">
+                    <!-- <div class="services_content">
                         <div>
                             <img src="assets/img/rlang.png" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
@@ -252,7 +259,7 @@
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
                         
-                    </div>
+                    </div> -->
 
                     <!-- project 4 -->
                     <div class="services_content">
@@ -261,7 +268,7 @@
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
                             <h3 class="services_title">Robotic Teaching Interface</h3>
                             <p class="project_description">
-                                As a part of the Collaborative Robotics Lab at NIST, I added reinforcement learning algorithm support to a robot teaching interface where
+                                The Robot Teaching Interface is a research project at <a href="https://www.nist.gov/collaborative-robots">NIST</a>, to which I added reinforcement learning algorithm support so that 
                                 goals can be given to the robot arm to perform pick-and-place tasks.
                             </div>
                         </p>
