fixed some typos

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
                 <h2 class="about_title section_title">Nice to meet you!</h2>
-                <span class="about_subtitle section_subtitle">To tell you a little about me</span>
+                <span class="about_subtitle section_subtitle">To tell you a little bit about me</span>
                 <div class="about_container container grid">
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
@@ -155,7 +155,7 @@
 
             <section class="services section" id="projects">
                 <h2 class="section_title">Check out my projects</h2>
-                <span class="section_subtitle">Here are some cool things I've worked out</span>
+                <span class="section_subtitle">Here are some cool things I've worked on</span>
 
                 <div class="services_container container grid">
 
@@ -336,7 +336,7 @@
             <!--==================== EXPERIENCE ====================-->
             <section class="experience section" id="experience">
                 <h2 class="section_title">Follow my journey</h2>
-                <span class="section_subtitle">Here's my professional experience</span>
+                <span class="section_subtitle">Here are some cool places I've worked at</span>
                 <div class="experience-container container">
                     <div class="experience_sections">
                         <div class="experience_content">
