--- a/index.html
+++ b/index.html
@@ -340,11 +340,78 @@
                 <div class="experience-container container">
                     <div class="experience_sections">
                         <div class="experience_content">
+
+                            <div class="experience_data">
+                                <div></div>
+                                <div>
+                                    <span class="experience_rounder"></span>
+                                    <span class="experience_line"></span>
+                                </div>
+
+                                <div>
+                                    <h3 class="experience_title">
+                                        Research Intern
+                                    </h3>
+                                    <span class="experience_subtitle">
+                                        Brookings Institute
+                                    </span>
+                                    <div class="experience_calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        Upcoming: 01/2024
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="experience_data">
+                                <div>
+                                    <h3 class="experience_title">
+                                        Policy Intern
+                                    </h3>
+                                    <span class="experience_subtitle">
+                                        White House Office of Science and Technology Policy
+                                    </span>
+                                    <div class="experience_calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        09/2023 - 12/2023
+                                    </div>
+                                    <p class="experience_content">
+                                        I provided Deputy U.S. Chief Technology Officer and policy leads of OSTP’s Tech and Policy divisions with operational support to advance major policy initiatives, including the Executive Order on AI.
+                                    </p>
+                                </div>
+                                <div>
+                                    <span class="experience_rounder"></span>
+                                    <span class="experience_line"></span>
+                                </div>
+                            </div>
+
+                            <div class="experience_data">
+                                <div></div>
+                                <div>
+                                    <span class="experience_rounder"></span>
+                                    <span class="experience_line"></span>
+                                </div>
+
+                                <div>
+                                    <h3 class="experience_title">
+                                        Civic Digital Fellow
+                                    </h3>
+                                    <span class="experience_subtitle">
+                                        U.S. Census Bureau
+                                    </span>
+                                    <div class="experience_calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        09/2023-12/2023
+                                    </div>
+                                    <p class="experience_content">
+                                        I analyzed the contributions of 10+ federal data sources to race and ethnicity records and imputed over 1.5 million values by integrating additional surveys to a person-level demographic database.
+                                </div>
+                            </div>
+
                             <!-- Experience 1 -->
                             <div class="experience_data">
                                 <div>
                                     <h3 class="experience_title">
-                                        Data Analytics Intern
+                                        Impact Analytics Intern
                                     </h3>
                                     <span class="experience_subtitle">
                                         Rhode Island State Government
@@ -354,7 +421,7 @@
                                         09/2022-12/2022
                                     </div>
                                     <p class="experience_content">
-                                        I supported a slate of economic recovery programs under the RI Rebounds initiative, a $32M effort to assist small businesses during Covid-19, through data cleaning, aggregation and analysis, metrics tracking, and project workflow management.
+                                        I supported a slate of economic recovery programs under the RI Rebounds initiative, a $32 million effort to assist small businesses during Covid-19, through data cleaning, aggregation and analysis, metrics tracking, and project workflow management.
                                     </p>
                                 </div>
                                 <div>
@@ -382,7 +449,7 @@
                                         06/2022-08/2022
                                     </div>
                                     <p class="experience_content">
-                                        I worked on the Billing team under Azure Storage to create a job runner that verifies multidimensional metrics from Azure Monitor against Kusto events. My project closed the validation coverage gap in the Azure Storage billing pipeline for almost 4 million transactions per tenant per day. 
+                                        I worked on the Billing team at Azure Storage to create a C++ job that validates metrics across the billing pipeline. My project closed the validation coverage gap for almost 4 million transactions per tenant. 
                                 </div>
                             </div>
 
@@ -400,17 +467,17 @@
                                         01/2022-05/2022
                                     </div>
                                     <p class="experience_content">
-                                        I worked under the Collaborative Robotics Laboratory at NIST to to add machine learning support to a robot teaching interface. With the goal of teaching a robot through human demonstration, I implemented a long short-term memory solution and reinforcement learning algorithms before collecting results in simulation.
+                                        I worked under the Collaborative Robotics Laboratory at NIST to add machine learning support to a robot teaching interface. I implemented Q-learning and R-max algorithms for the robot to learn to move a block of a certain color.
                                     </p>
                                 </div>
                                 <div>
                                     <span class="experience_rounder"></span>
-                                    <span class="experience_line"></span>
+                                    <!-- <span class="experience_line"></span> -->
                                 </div>
                             </div>
 
                             <!-- Experience 4 -->
-                            <div class="experience_data">
+                            <!-- <div class="experience_data">
                                 <div></div>
                                 <div>
                                     <span class="experience_rounder"></span>
@@ -437,10 +504,10 @@
                                         CS0100 Data Fluency: I led discussion sections and labs for over 60 students to reLearn and practice computational techniques in data science; assisted with course preparation tailored towards non-concentrators.
                                     </p>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <!-- Experience 5 -->
-                            <div class="experience_data">
+                            <!-- <div class="experience_data">
                                 <div>
                                     <h3 class="experience_title">
                                         Research Assistant
@@ -461,7 +528,7 @@
                                 <div>
                                     <span class="experience_rounder"></span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
