--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                                         06/2022-08/2022
                                     </div>
                                     <p class="experience_content">
-                                        I worked on the Billing team at Azure Storage to create a C++ job that validates metrics across the billing pipeline. My project closed the validation coverage gap for almost 4 million transactions per tenant. 
+                                        I worked on the Billing team at Azure Storage to create a C# job that validates metrics across the billing pipeline. My project closed the validation coverage gap for almost 4 million transactions per tenant. 
                                 </div>
                             </div>
 
