--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </a>
                     </li> -->
                     <li class="nav_item">
-                        <a href="#contact" class="nav_link">
+                        <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="nav_link">
                             <i class="uil uil-message nav_icon"></i>Contact
                         </a>
                     </li>
@@ -135,20 +135,20 @@
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
                 <h2 class="about_title section_title">Nice to meet you!</h2>
-                <span class="about_subtitle section_subtitle">To tell you a little bit about me</span>
+                <span class="about_subtitle section_subtitle">Here is a bit about me</span>
                 <div class="about_container container grid">
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
-                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (here's a photo of me and Arati sharing a good chuckle XD)! 
+                            My friends describe me in three words: curious, driven, and loud, with emphasis on the last one. If we ever meet in person, you'll probably hear my laugh before even seeing me (a photo of me and Arati sharing a good chuckle XD for proof)!
                             <br></br>
                             I describe myself as an optimist at heart and a cautionist by training. I believe technology presents opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
                         </p>
-                        <div class="about_button">
+                        <!-- <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button_icon"></i>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
