--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
-                            My friends describe me in three words: curious, driven, and loud, with emphasis on the last one. If we ever meet in person, you'll probably hear my laugh before even seeing me (a photo of me and Arati sharing a good chuckle XD for proof)!
+                            My friends describe me in three words: curious, driven, and loud, with emphasis on the last one. If we ever meet in person, you'll probably hear my laugh before even seeing me (see a photo of me and Arati sharing a good chuckle)!
                             <br></br>
                             I describe myself as an optimist at heart and a cautionist by training. I believe technology presents opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
                         </p>
