added linkedin link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <h1 class="home_title">Hi, Jenn here!</h1>
                             <h3 class="home_subtitle"></h3>
                             <p class="home_description">I'm a junior at Brown University studying Computer Science and International and Public Affairs with an interest in tech policy and human-centered computing.</p>
-                            <a href="#contact" class="button button--flex">
+                            <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="button button--flex">
                                 Let's connect &nbsp;:)
                             </a>
                         </div>
