--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 <i class="uil uil-times nav_close" id="nav-close"></i>
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link active-link">
+                        <!-- <a href="#home" class="nav_link active-link">
                             <i class="uil uil-estate nav_icon"></i> Home
-                        </a>
+                        </a> -->
                     </li>
                     <li class="nav_item">
-                        <a href="#about" class="nav_link">
+                        <!-- <a href="#about" class="nav_link">
                             <i class="uil uil-user-circle nav_icon"></i> About
-                        </a>
+                        </a> -->
                     </li>
                     <li class="nav_item">
                         <a href="#projects" class="nav_link">
@@ -116,10 +116,12 @@
                         <div class="home_data">
                             <h1 class="home_title">Hi, Jenn here!</h1>
                             <h3 class="home_subtitle"></h3>
-                            <p class="home_description">I'm a junior at Brown University studying Computer Science and International and Public Affairs with an interest in tech policy and human-centered computing.</p>
-                            <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="button button--flex">
+                            <p class="home_description">I'm a senior at Brown University studying Computer Science and International and Public Affairs with an interest in tech policy and human-centered computing. 
+                                <br><br>
+                                My research spans the fields of algorithmic fairness, human-robot interaction, and computational social choice, where I've applied <a href="https://arxiv.org/pdf/1912.04883">computing</a> as a formalizer to social issues and a rebuttal to policy interventions.</p>
+                            <!-- <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="button button--flex">
                                 Let's connect &nbsp;:)
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -133,28 +135,29 @@
             </section>
 
             <!--==================== ABOUT ====================-->
-            <section class="about section" id="about">
+            <!-- <section class="about section" id="about">
                 <h2 class="about_title section_title">Nice to meet you!</h2>
                 <span class="about_subtitle section_subtitle">Here is a bit about me</span>
                 <div class="about_container container grid">
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
+                            
                             My friends describe me in three words: curious, driven, and loud, with emphasis on the last one. If we're ever in the same room, you'll probably hear my laugh before meeting me (see a photo of me and Arati sharing a good chuckle)!
                             <br></br>
                             I describe myself as an optimist at heart and a cautionist by training. I believe technology presents opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
-                        </p>
+                        </p> -->
                         <!-- <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button_icon"></i>
                             </a>
                         </div> -->
-                    </div>
+                    <!-- </div>
                 </div>
-            </section>
+            </section> -->
 
             <section class="services section" id="projects">
-                <h2 class="section_title">Check out my projects</h2>
+                <h2 class="section_title">Check out my projects!</h2>
                 <span class="section_subtitle">Here are some cool things I've worked on</span>
 
                 <div class="services_container container grid">
@@ -335,7 +338,7 @@
 
             <!--==================== EXPERIENCE ====================-->
             <section class="experience section" id="experience">
-                <h2 class="section_title">Follow my journey</h2>
+                <h2 class="section_title">Where is Jenn?</h2>
                 <span class="section_subtitle">Here are some cool places I've worked at</span>
                 <div class="experience-container container">
                     <div class="experience_sections">
