fixed some animation issues and edited text

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                             <h3 class="home_subtitle"></h3>
                             <p class="home_description">I'm a senior at Brown University studying Computer Science and International and Public Affairs with an interest in tech policy and human-centered computing. 
                                 <br><br>
-                                My research spans the fields of algorithmic fairness, human-robot interaction, and computational social choice, where I've applied <a href="https://arxiv.org/pdf/1912.04883">computing</a> as a formalizer to social issues and a rebuttal to policy interventions.</p>
+                                My research spans the fields of algorithmic fairness, human-robot interaction, and computational social choice, 
+                                where I see <a href="https://arxiv.org/pdf/1912.04883" class="button-link">computing</a> both as a formalizer to social issues and a rebuttal to policy interventions.</p>
                             <!-- <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="button button--flex">
                                 Let's connect &nbsp;:)
                             </a> -->
@@ -135,30 +136,24 @@
             </section>
 
             <!--==================== ABOUT ====================-->
-            <!-- <section class="about section" id="about">
-                <h2 class="about_title section_title">Nice to meet you!</h2>
+           <!-- <section class="about section" id="about"> -->
+                <!-- <h2 class="about_title section_title">Nice to meet you!</h2>
                 <span class="about_subtitle section_subtitle">Here is a bit about me</span>
                 <div class="about_container container grid">
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
-                        <p class="about_description">
-                            
+                        <p class="about_description"> 
                             My friends describe me in three words: curious, driven, and loud, with emphasis on the last one. If we're ever in the same room, you'll probably hear my laugh before meeting me (see a photo of me and Arati sharing a good chuckle)!
                             <br></br>
                             I describe myself as an optimist at heart and a cautionist by training. I believe technology presents opportunities to tackle society's greatest challenges but only with the necessary guardrails to ensure safe and responsible use. This belief has guided my work, from exploring models for human-robot collaboration at NIST to researching policies that mitigate AI risks at OSTP.
-                        </p> -->
-                        <!-- <div class="about_button">
-                            <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
-                                Download CV<i class="uil uil-download-alt button_icon"></i>
-                            </a>
-                        </div> -->
-                    <!-- </div>
-                </div>
-            </section> -->
+                        </p>
+                    </div>
+                </div> -->
+            <!-- </section> -->
 
             <section class="services section" id="projects">
-                <h2 class="section_title">Check out my projects!</h2>
-                <span class="section_subtitle">Here are some cool things I've worked on</span>
+                <h2 class="about_title section_title">Check out my projects!</h2>
+                <span class="about_subtitle section_subtitle">Here are some cool things I've worked on</span>
 
                 <div class="services_container container grid">
 
