--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
             </section> -->
 
             <!--==================== CONTACT ME ====================-->
-            <section class="contact section" id="contact">
+            <!-- <section class="contact section" id="contact">
                 <h2 class="section_title">Get in touch!</h2>
                 <span class="section_subtitle">Don't worry, I don't bite</span>
 
@@ -595,7 +595,7 @@
                         </div>
                     </form>
                 </div>
-            </section>
+            </section> -->
         </main>
 
         <!--==================== FOOTER ====================-->
@@ -623,9 +623,9 @@
                         <li>
                             <a href="#projects" class="footer_link">Projects</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#contact" class="footer_link">Contact</a>
-                        </li>
+                        </li> -->
                     </ul>
 
                     <div class="footer_socials">
