updated website text

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                         <div class="home_data">
                             <h1 class="home_title">Hi, Jenn here!</h1>
                             <h3 class="home_subtitle"></h3>
-                            <p class="home_description">I'm a senior at Brown University studying Computer Science and International and Public Affairs with an interest in tech policy and human-centered computing. 
+                            <p class="home_description">I'm a senior at Brown University studying Computer Science with an interest in human-robot interaction, algorithmic fairness, and AI governance
                                 <br><br>
-                                My research spans the fields of algorithmic fairness, human-robot interaction, and computational social choice, 
-                                where I see <a href="https://arxiv.org/pdf/1912.04883" class="button-link">computing</a> both as a formalizer to social issues and a rebuttal to policy interventions.</p>
+                                My work explores transforming high-level societal objectives (e.g., what it means for a system to be intuitive to use or equitable in its decisions) into operationalizable low-level specifications.
+                            </p>
                             <!-- <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="button button--flex">
                                 Let's connect &nbsp;:)
                             </a> -->
@@ -134,6 +134,30 @@
                     </div>
                 </div>
             </section>
+
+            <!--==================== PUBLICATIONS ==================== -->
+            <!-- <section class="services section" id="publications">
+                <h2 class="section_title">Research Publications</h2>
+                <span class="section_subtitle">My academic contributions</span>
+
+                <div class="services_container container grid">
+                    <!-- Publication 1 -->
+                    <!-- <div class="services_content">
+                        <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                            <h3 class="services_title">Computing as a Policy Analysis Tool</h3>
+                            <p class="project_description">
+                                A study exploring how computational tools can be used to analyze and evaluate policy interventions, focusing on algorithmic fairness and social impact assessment.
+                                <br><br>
+                                <em>arXiv preprint (2024)</em>
+                            </p>
+                        </div>
+                        <a href="https://arxiv.org/pdf/1912.04883" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            Read Paper
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </section> -->
 
             <!--==================== ABOUT ====================-->
            <!-- <section class="about section" id="about"> -->
